<resources>
    <string name="app_name">TermProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register_redirect">Register new user</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="open">Open</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="api_key">AIzaSyDnAL3qsC3X0ZjKAP8NKRMHir7LMrNjiuo</string>

    <string-array name="dropdown">
        <item>All Books</item>
        <item>Read</item>
        <item>Currently Reading</item>
        <item>To Read</item>
    </string-array>
    <string-array name="shelves">
        <item>No Shelf</item>
        <item>Read</item>
        <item>Currently Reading</item>
        <item>To Read</item>
    </string-array>
    <string-array name="review_filter">
        <item>All</item>
        <item>⭐</item>
        <item>⭐⭐</item>
        <item>⭐⭐⭐</item>
        <item>⭐⭐⭐⭐</item>
        <item>⭐⭐⭐⭐⭐</item>
    </string-array>
    <string-array name="tags">
        <item>fiction</item>
        <item>classic</item>
        <item>popular</item>
    </string-array>
    <string-array name="search_types">
        <item>Title</item>
        <item>Author</item>
    </string-array>
    <string-array name="subjects">
        <item>Filter by Subject</item>
        <item>fiction</item>
        <item>young adult</item>
        <item>biography</item>
        <item>business</item>
        <item>education</item>
        <item>health</item>
        <item>science</item>
    </string-array>
    <string-array name="tag_colors">
        <item>#093145</item>
        <item>#3c6478</item>
        <item>#107896</item>
        <item>#43abc9</item>
        <item>#a29356</item>
        <item>#a3b86c</item>
        <item>#d3b53d</item>
        <item>#ebc944</item>
        <item>#c2571a</item>
        <item>#f26d21</item>
        <item>#9a2617</item>
        <item>#c02f1d</item>
    </string-array>
</resources>